--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -10,6 +10,7 @@
   <script type = "text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
   <script type = "text/javascript" src="{% static 'js/links.js' %}"></script>
   <script src="{% static 'js/modal_poll.js' %}"></script>
+  <script src="{% static 'js/modal_subject.js' %}"></script>
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -35,7 +36,7 @@
             <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
               <li><a href="{% url 'course:replicate_subject' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
               <li><a href="{% url 'course:update_subject' subject.slug %}"> <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
-              <li><a href="{% url 'course:delete_subject' subject.slug %}" ><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+              <li><a href="javascript:delete_subject.get('{% url 'course:delete_subject' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
             </ul>
           </div>
           {% endif %}
@@ -101,5 +102,8 @@
         </div>
       </div>
     </div>
+  </div>
+  <div id="modal_subject">
+
   </div>
 {% endblock %}
