--- a/users/templates/users/search.html
+++ b/users/templates/users/search.html
@@ -12,8 +12,7 @@
 
 {% block breadcrumbs %}
   {{ block.super }}
-  {% breadcrumb 'Search' 'users:search' %}
-
+  {% breadcrumb search 'users:search' %}
 {% endblock %}
 
 
