--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -1,76 +1,38 @@
-{% extends 'subject/index.html' %}
+{% load i18n professor_access %}
 
-{% load static i18n permission_tags professor_access django_bootstrap_breadcrumbs %}
+<div class="panel panel-default cards-detail">
+  <div class="panel-heading topic">
+    <div class="row">
+      <div class="col-md-1 moreAccordion" data-toggle="collapse" data-parent="#accordion-{{topic.slug}}" href=".collapseTopic-{{topic.slug}}" aria-expanded="false" aria-controls="collapseTopic-{{topic.slug}}">
+        <button class="btn btn-default btn-sm caret-square" onclick="topic.get('{% url 'course:view_topic' topic.slug %}', '#content_topic_{{topic.slug}}', 'false');"><i class="fa fa-angle-down fa-2x" aria-hidden="true"></i></button>
+      </div>
+      <div class="col-xs-9 col-md-9 titleTopic Topic-detail">
+        <a role="button">
+          <h4>{{topic}}</h4>
+        </a>
+      </div><!--column -->
+      <div class="col-xs-3 col-md-2 divMoreActions">
+        <div class="btn-group">
+          <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+          </button>
 
-
-{% block javascript %}
-        <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
-        <script src="{% static 'js/file.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/material.js' %}"></script>
-        <script type = "text/javascript" src="{% static 'links.js' %}"></script>
-{% endblock %}
-
-
-{% block breadcrumbs %}
-    {{ block.super }}
-    {% breadcrumb topic.name 'course:view_topic' topic.slug %}
-{% endblock %}
-
-{% block content %}
-<div class="col-md-12 col-xs-12 col-sm-12">
-<div class="panel panel-info">
-    <div class="panel-heading course">
-	<div class="row">
-          <div class="col-md-10 col-sm-7 titleTopic">
-          <h4> {{topic.name}}</h4>
-          </div>
-      <div class="col-xs-4 col-md-2 divMoreActions">
-	{% professor_subject subject user as permissions%}
-          {% if permissions %}
-            <div class="btn-group">
-              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                <li>
-                    <a href="{% url 'course:replicate_topic' topic.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a>
-                </li>
-                <li>
-                    <a href="{% url 'course:update_subject' subject.slug %}" data-toggle="modal" data-target="#editSubject"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a>
-                </li>
-                <li><a href="{% url 'course:delete_topic' topic.slug %}"><i class="fa fa-trash fa-fw"  aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
-              </ul>
-            </div>
+          {# dropdown de topic com as opções de replicar, editar e deletar #}
+          {% professor_subject topic.subject user as dropdown_topic %}
+          {% if dropdown_topic %}
+          <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+            <li><a href="{% url 'course:replicate_topic' topic.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
+            <li><a href="javascript:topic.get('{% url 'course:update_topic' topic.slug %}','#content_topic_{{topic.slug}}','true');"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
+            <li><a href="{% url 'course:delete_topic' topic.slug %}"><i class="fa fa-trash fa-fw"  aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+          </ul>
           {% endif %}
         </div>
-	    </div>
-    </div>
-    <div class="panel-body">
-      <p>
-        {{topic.description|safe}}
-      </p>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-body">
-        {% include "topic/topic_card.html" %}
       </div>
     </div>
-</div>
-  <div class="col-md-6">
-      <h3>{% trans 'Students - Specific Exercises' %}</h3>
-      <br/>
   </div>
-    {# mostra a lista de usuários caso seja um professor ou admin #}
-  {% if user|has_role:'professor' or user|has_role:'system_admin' %}
-    {% for user in users %}
-      {% include "exercise/card_list_user.html" %}
-    {% endfor %}
-  {% endif %}
-  {# caso seja um estudante, mostra a lista de exercícios proposta a ele #}
-  {% if user|has_role:'student'%}
-    {% for exercise in exercises %}
-      {% include "exercise/card_topic_exercises.html" %}
-    {% endfor %}
-  {% endif %}
-{% endblock %}
+  <div class="panel-collapse collapseTopic-{{topic.slug}} topic_{{ topic.id }} collapse" role="tabpanel" aria-labelledby="heading_{{topic.id}}" aria-expanded="false" aria-hidden="true">
+    <div class="panel-body" id="content_topic_{{topic.slug}}">
+      
+    </div>
+  </div>
+</div>
