--- a/courses/templates/topic/delete.html
+++ b/courses/templates/topic/delete.html
@@ -1,13 +1,13 @@
 {% load static i18n permission_tags %}
 
 <!-- Modal (remember to change the ids!!!) -->
-<div class="modal fade" id="topic_delete" tabindex="-1" role="dialog" aria-labelledby="{{topic.slug}}_delete">
+<div class="modal fade" id="topic_delete_{{topic.slug}}" tabindex="-1" role="dialog" aria-labelledby="{{topic.slug}}_delete">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
 
-        <h4 class="modal-title" id="{{topic.slug}}_delete">{% trans "Delete Topic" %}</h4>
+        <h4 class="modal-title">{% trans "Delete Topic" %}</h4>
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
