--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -19,11 +19,11 @@
 
           {# dropdown de topic com as opções de replicar, editar e deletar #}
           {% professor_subject topic.subject user as dropdown_topic %}
-          {% if dropdown_topic %}
+          {% if dropdown_topic %} 
           <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
             <li><a href="{% url 'course:replicate_topic' topic.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
             <li><a href="javascript:topic.get('{% url 'course:update_topic' topic.slug %}','#content_topic_{{topic.slug}}','true');"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
-            <li><a href="{% url 'course:delete_topic' topic.slug %}"><i class="fa fa-trash fa-fw"  aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+            <li><a href="javascript:delete_topic.get('{% url 'course:delete_topic' topic.slug %}?view=index','#topic_delete_{{topic.slug}}','#modal_topic');"><i class="fa fa-trash fa-fw"  aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
           </ul>
           {% endif %}
         </div>
@@ -35,4 +35,7 @@
       
     </div>
   </div>
+</div>
+<div id="modal_topic">
+
 </div>
