--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -143,6 +143,7 @@
 
   {% endblock script_link %}
   <!-- Init material Bootstrap -->
+  <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
   <script type="text/javascript">$.material.init()</script>
 </body>
 
