--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -29,15 +29,15 @@
            {% csrf_token %}
            <div class="form-group">
              <label class="control-label" for="focusedInput1">{% trans 'Current Password' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
            </div>
            <div class="form-group">
              <label class="control-label" for="focusedInput1">{% trans 'New Password' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
            </div>
            <div class="form-group">
              <label class="control-label" for="focusedInput1">{% trans 'Confirmation' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
            </div>
            <div class="row">
             <div class="col-md-3 col-sm-2 col-xs-2">
