--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -54,9 +54,8 @@
 	{% endblock %}
 
 	<!-- Summernote -->
-	<script src="http://podivej.se/js/summernote.min.js" type="text/javascript"></script>
-	<link href="http://podivej.se/css/summernote.css" type="text/css" rel="stylesheet" />
-	<link href="http://podivej.se/css/summernote-bs3.css" type="text/css" rel="stylesheet">
+	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
+	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
