added support for all date formats

--- a/courses/templates/course/datepicker.html
+++ b/courses/templates/course/datepicker.html
@@ -1,4 +1,4 @@
-<div class="input-append date" id="dp2" data-date="12-02-2012" >
+<div class="input-append date" id="dp2" >
   <input class="span2" size="16" type="text">
   <span class="add-on"><i class="icon-th"></i></span>
 </div>
