Changing topic structure to accordion

--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -63,15 +63,17 @@
   </div>
 
   {# lista de tópicos #}
-  {% for topic in topics %}
-  {% include "topic/index.html" %}
+    <div class="panel-group" id="topics" role="tablist" aria-multiselectable="true">
+        {% for topic in topics %}
+            {% include "topic/index.html" %}
     {# {% professor_subject topic.subject user as topic_professor%}#}
     {# {% if topic_professor %}#}
       {# {% include "subject/form_view_teacher.html" %}#}
     {# {% else %}#}
       {# {% include "subject/form_view_student.html" %}#}
     {# {% endif %}#}
-  {% endfor %}
+        {% endfor %}
+    </div>
 
   {# botão create topic #}
   {% professor_subject subject user as professor_sub %}
