--- a/courses/templates/topic/delete.html
+++ b/courses/templates/topic/delete.html
@@ -1,7 +1,7 @@
 {% load static i18n permission_tags %}
 
 <!-- Modal (remember to change the ids!!!) -->
-<div class="modal fade" id="topic_delete_{{topic.slug}}" tabindex="-1" role="dialog" aria-labelledby="{{topic.slug}}_delete">
+<div class="modal fade" id="topic" tabindex="-1" role="dialog" aria-labelledby="{{topic.slug}}_delete">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <!-- Modal Header -->
@@ -22,6 +22,13 @@
         <!-- Don't remove that!!!  -->
         <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
         <button type="submit" id="button" form="topic_form" class="btn btn-primary btn-raised">{% trans "Delete" %}</button>
+
+        <script>
+          $("#topic_form").submit(function(event) {
+            RemoveTopic.remove("{% url 'course:delete_topic' topic.slug %}",$(this).serialize(),"#topic_all_{{topic.slug}}");
+            event.preventDefault();
+          });
+        </script>
       </div>
     </div>
   </div>
