ajeitando erro no template de forum #378

--- a/forum/templates/forum/forum_view.html
+++ b/forum/templates/forum/forum_view.html
@@ -1,4 +1,4 @@
-{% extends 'topic/index.html' %}
+{% extends 'subject/index.html' %}
 
 {% load static i18n permission_tags list_post django_bootstrap_breadcrumbs %}
 {% load widget_tweaks %}
