concertando bug de data em poll #448

--- a/poll/templates/poll/create.html
+++ b/poll/templates/poll/create.html
@@ -163,6 +163,7 @@
 
   $('.date-picker').datepicker({
       language: locale,
+      startDate: "dateToday",
   });
 
 // Este js tem que ficar aqui se não o button add não vai funcionar
