--- a/links/templates/links/view_link.html
+++ b/links/templates/links/view_link.html
@@ -1,6 +1,6 @@
 {% load static i18n list_topic_foruns permission_tags %}
 <!--MODAL VIEW LINK-->
-<div class="modal fade" data-backdrop="false" id="viewLinkModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="viewLinkModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -24,5 +24,5 @@
 </div>
 <!-- EndModal -->
 <script type="text/javascript">
-$('.modal-backdrop').remove();
+// $('.modal-backdrop').remove();
 </script>
