ajustes no icone dos arquivos e mensagem de sucesso quando craido um file #381

--- a/files/templates/files/create_file.html
+++ b/files/templates/files/create_file.html
@@ -99,6 +99,7 @@
                 contentType: false,
                 success: function(data) {
                     $('#fileModal').modal('hide');
+                    alertify.success('File successfully created!');
                     $('#list-topic{{ topic.id }}-files').append(data);
                     $('#list-topic{{ topic.id }}-files-edit').append(data);
                 },
