Colocando a opção de abrir o file quando vai edita-lo #456

--- a/files/templates/files/update_file.html
+++ b/files/templates/files/update_file.html
@@ -34,15 +34,16 @@
                                                     </button>
                                                 </span>
                                             </div>
-                                            <div class="crearfix">
-                                                <a href="{{ file.file_url.url }}" target="_blank">{% trans "See current file" %}</a>
-                                            </div>
                                         {% else %}
                                             {% render_field field class='form-control input-sm' %}
-                                            <span id="helpBlock" class="help-block">{{ field.help_text }}</span>
                                         {% endif %}
+                                        <span id="helpBlock" class="help-block">{{ field.help_text }}</span>
                                     </div>
-
+                                    {% if field.auto_id == 'id_file_url' %}
+                                      <div class="col-md-12 crearfix">
+                                          <a href="{{ file.file_url.url }}" target="_blank">{% trans "See current file" %}</a>
+                                      </div>
+                                    {% endif %}
                                     {% if field.errors %}
                                         <div class="alert alert-danger alert-dismissible clearfix" role="alert">
                                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
