Ajustes no layout para o safari #454

--- a/files/templates/files/render_file.html
+++ b/files/templates/files/render_file.html
@@ -1,1 +1,1 @@
-<li id="file_{{ file.slug }}"><i class="fa {{ file.file_type.icon }}"></i> <a href="{{ file.file_url.url }}" target="_blank">{{ file.name }}</a></li>
+<li id="file_{{ file.slug }}"><i class="fa {{ file.file_type.icon }}" aria-hidden="true"></i> <a href="{{ file.file_url.url }}" target="_blank">{{ file.name }}</a></li>
