Removed duplicated checkbox [Issue:#444]

--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -65,7 +65,7 @@
                 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
 									<div class="checkbox">
 	                  					<label for="{{ field.auto_id }}">
-	                      					{% render_field field %}<span class="checkbox-material"><span class="check"></span></span> {{field.label}}
+	                      					{% render_field field %} {{field.label}}
 	                  					</label>
 	                				</div>
 								{% endif %}
