--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -106,4 +106,11 @@
 		</div>
 	</div>
 	<br clear="all" />
+	<script type="text/javascript">
+	var locale = navigator.language || navigator.userLanguage;
+
+	$('.date-picker').datepicker({
+		language: locale,
+	});
+	</script>
 {% endblock %}
