--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -27,13 +27,11 @@
 							{% render_field field class='form-control' %}
 						</div>
 						{% if field.errors%}
-							<div class="alert alert-danger alert-dismissible" role="alert">
-								<ul>
-									{% for error in field.errors %}
-										<li>{{ error }}</li>
-									{% endfor %}
-								</ul>
-							</div>
+								{% for error in field.errors %}
+										<script type="text/javascript">
+											alertify.error('{{error}}');
+										</script>
+								{% endfor %}
 						</div>
 						{% endif %}
 					{% endfor %}
