removed matheuslins code, which is represented as the exercise app and checked if nothing else was affected when removing it

--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -1,4 +1,4 @@
-{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access list_topic_exercises %}
+{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access %}
 {% professor_subject topic.subject user as professor_links %}
 
   {% block javascript %}
