--- a/courses/templates/topic/update.html
+++ b/courses/templates/topic/update.html
@@ -1,4 +1,4 @@
-{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access list_topic_exercises course_value_field %}
+{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access course_value_field %}
 
 <form class="" id="form_topic_update_{{topic.slug}}" method="post" action="">
   {% csrf_token %}
@@ -84,7 +84,6 @@
         <ul class="dropdown-menu" aria-labelledby="dLabel">
           <li><a href="javascript:createForum('{% url 'course:forum:create' %}', '{{ topic.id }}')">{% trans 'Create Forum' %}</a></li>
           <li><a href="javascript:modal.get('{% url 'course:poll:create_poll' topic.slug%}','#poll','#requisicoes_ajax');">{% trans 'Create Poll' %}</a></li>
-          <li><a href="javascript:modal.get('{% url 'course:exercise:create_exercise' topic.slug %}', '#createExercisesModal','#requisicoes_ajax')">{% trans 'Delivery Material' %}</a></li>
           <li><a href="{% url 'course:exam:create_exam' topic.slug %}">{% trans 'Create exam' %}</a></li>
         </ul>
       </div>
