Corrigindo titulo das paginas [Issue #429]

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-	<title>{{ title }}</title>
+	<title>{{ title }} | Amadeus</title>
 
       <!-- jQuery & jQuery UI -->
       <script type="text/javascript" src="{% static 'js/vendor/jquery-3.1.0.min.js' %}"></script>
