--- a/core/templates/guest.html
+++ b/core/templates/guest.html
@@ -5,7 +5,7 @@
 
 <html>
 <head>
-    <title>{{ title }}</title>
+    <title>{{ title }} | Amadeus</title>
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store" />
     <link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
