--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -41,8 +41,8 @@
           {% csrf_token %}
           <div class="col-md-10 col-md-offset-1">
             <div class="form-group">
-              <label for="inputEmail" class="control-label"> {% trans 'Username' %}</label>
-              <input form="form-login" for="inputSmall" type="text" name="username" class="form-control" placeholder="{% trans 'Username' %}" id="inputEmail" value="{% if username %}{{username}}{% endif %}">
+              <label for="inputEmail" class="control-label"> {% trans 'Email' %}</label>
+              <input form="form-login" for="inputSmall" type="text" name="email" class="form-control" placeholder="{% trans 'Email' %}" id="inputEmail" value="{% if username %}{{username}}{% endif %}">
             </div>
           </div>
           <div class="col-md-10 col-md-offset-1">
@@ -51,20 +51,13 @@
               <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
             </div>
           </div>
-          <div class="col-md-10 col-md-offset-1">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" name="checkbox"><span class="checkbox-material"></span> {% trans 'Remember Email' %}
-              </label>
-            </div>
-          </div>
         </form>
         <div class="row">
           <div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 col-lg-offset-1 col-md-offset-1 text-center">
             <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
           </div>
           <div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
-            <a class="btn btn-default btn-raised btn-block" href="#" formaction="#" style="position: initial;">{% trans 'Guest' %}</a>
+            <a class="btn btn-default btn-raised btn-block" href="#" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
           </div>
         </div>
         <div class="row">
@@ -74,7 +67,6 @@
         </div>
       </div>
     </div>
-    <a class="btn btn-raised btn-primary btn-block" href="#">{% trans 'Sign Up' %} </a>
   </div>
 </div>
 
