--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -57,7 +57,7 @@
             <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
           </div>
           <div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
-            <a class="btn btn-default btn-raised btn-block" href="#" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
+            <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
           </div>
         </div>
         <div class="row">
