--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -73,7 +73,7 @@
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <div class="col-md-5 cards-content" id= 'NavBarSearch'>
-        <form id="SearchForm" action="{% url 'users:search' %}" method="get" accept-charset="utf-8">
+        <form id="SearchForm" action="#" method="get" accept-charset="utf-8">
           <div class="input-group">
             <div class="form-group is-empty" >
               <input type="text" class="form-control" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search">
@@ -107,10 +107,10 @@
         <li>
           <a href="" data-toggle="dropdown">{{ user }}</a>
           <ul class="dropdown-menu pull-right">
-            <li><a href="{% url 'users:profile' %}">{% trans 'Perfil' %}</a></li>
-            <li><a href="{% url 'users:update_profile' %}">{% trans 'Edit Profile' %}</a></li>
-            <li><a href="{% url 'users:change_password' %}">{% trans 'Change password' %}</a></li>
-            <li><a href="{% url 'users:remove_account' %}">{% trans 'Remove account' %}</a></li>
+            <li><a href="#">{% trans 'Perfil' %}</a></li>
+            <li><a href="#">{% trans 'Edit Profile' %}</a></li>
+            <li><a href="#">{% trans 'Change password' %}</a></li>
+            <li><a href="#">{% trans 'Remove account' %}</a></li>
           </ul>
         </li>
         <li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out"> <a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
